<resources>
    <string name="app_name">덩어리 수집기</string>
    <string name="title_minigame">탐색</string>
    <string name="title_lootbox">상자</string>
    <string name="title_lootlump">뽑기</string>
    <string name="title_showlump">덩어리</string>
    <string name="title_upgrade">강화</string>
    <string name="title_exp">경험치</string>
    <string name="title_search">탐색도</string>
    <string name="name_upgrade_0">스킬 발동 확률 증가</string>
    <string name="name_upgrade_1">스킬 발동 효과 증가</string>
    <string name="name_upgrade_2">탐색도 획득량 증가</string>
    <string name="name_upgrade_3">골드 획득량 증가</string>
    <string name="name_upgrade_4">경험치 획득량 증가</string>
    <string name="name_upgrade_5">최대 탐색도 증가</string>
    <string name="name_upgrade_6">스킬 활성화 최대 수 증가</string>
    <string name="name_upgrade_7">10초당 탐색도 획득</string>
    <string name="name_upgrade_8">10초당 골드 획득</string>
    <string name="name_upgrade_9">10초당 경험치 획득</string>
    <string name="name_loot_title">획득할 수 있는 것들</string>
    <string name="name_loot_0">탐색도 100</string>
    <string name="name_loot_1">골드 100</string>
    <string name="name_loot_2">경험치 100</string>
    <string name="s_close">닫기</string>
    <string name="s_release_lump">놓아주기</string>
    <string name="s_showlump">보유한 덩어리</string>
    <string name="s_minigame_reset">센서 위치 초기화</string>
    <string name="option_title">환경설정</string>
    <string name="option_sound">소리 토글</string>
    <string name="option_sensitivity">가속도 센서 민감도</string>
    <string name="option_close">저장 후 닫기</string>
</resources>

