<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_gamestart">

    <fragment
        android:id="@+id/navigation_gamestart"
        android:name="com.mapteam1.lumpcollector.ui.minigame.MinigameFragment"
        android:label="@string/title_minigame"
        tools:layout="@layout/fragment_minigame" />

    <fragment
        android:id="@+id/navigation_open_itembox"
        android:name="com.mapteam1.lumpcollector.ui.lootbox.LootBoxFragment"
        android:label="@string/title_lootbox"
        tools:layout="@layout/fragment_lootbox" />

    <fragment
        android:id="@+id/navigation_open_charbox"
        android:name="com.mapteam1.lumpcollector.ui.lootlump.LootLumpFragment"
        android:label="@string/title_lootlump"
        tools:layout="@layout/fragment_lootlump" />

    <fragment
        android:id="@+id/navigation_view_character"
        android:name="com.mapteam1.lumpcollector.ui.showlump.ShowLumpFragment"
        android:label="@string/title_showlump"
        tools:layout="@layout/fragment_showlump" />

    <fragment
        android:id="@+id/navigation_upgrade"
        android:name="com.mapteam1.lumpcollector.ui.upgrade.UpgradeFragment"
        android:label="@string/title_upgrade"
        tools:layout="@layout/fragment_upgrade" />


</navigation>